# app/Http/Controllers/AuthController.php
@@ -1,89 +1,0 @@
-<?php
-
-namespace App\Http\Controllers;
- 
-use Illuminate\Http\Request;
-use Illuminate\Support\Facades\Auth;
-use App\Models\User;
-use Tymon\JWTAuth\Facades\JWTAuth;
- 
-class AuthController extends Controller
-{
-    /**
-     * @OA\Post(
-     *     path="/api/login",
-     *     operationId="login",
-     *     tags={"Đăng nhập và lấy token"},
-     *     summary="User login",
-     *     description="Người dùng đăng nhập và JWT token được khởi tạo",
-     *     @OA\RequestBody(
-     *         required=true,
-     *         @OA\JsonContent(
-     *             required={"phone","password"},
-     *             @OA\Property(property="phone", type="string", format="phone"),
-     *             @OA\Property(property="password", type="string", format="password")
-     *         ),
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="Successful login with JWT token",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="access_token", type="string"),
-     *             @OA\Property(property="token_type", type="string"),
-     *             @OA\Property(property="expires_in", type="integer")
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=401,
-     *         description="Unauthorized"
-     *     )
-     * )
-     */
-    public function login(Request $request)
-    {
-        $credentials = Array(
-            'email' => $request->phone,
-            'password' => $request->password
-        );
-        if (!$token = Auth::attempt($credentials)) {
-            return response()->json(['error' => 'Unauthorized'], 401);
-        }
-        return $this->respondWithToken($token);
-    }
- 
-    /**
-     * @OA\Post(
-     *     path="/TelevisionAPI/api/logout",
-     *     operationId="logout",
-     *     tags={"Logout"},
-     *     summary="User logout",
-     *     description="User logout and JWT token generation",
-     *     @OA\RequestBody(
-     *         required=false,
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="Successful logout",
-     *     ),
-     *     @OA\Response(
-     *         response=401,
-     *         description="Unauthorized"
-     *     ),
-     *     security={{"bearerAuth":{}}}
-     * )
-     */
-    public function logout()
-    {
-        Auth::logout();
-        return response()->json(['message' => 'Successfully logged out']);
-    }
- 
-    protected function respondWithToken($token)
-    {
-        return response()->json([
-            'access_token' => $token,
-            'token_type' => 'bearer',
-            'expires_in' => Auth::factory()->getTTL() * 60
-        ]);
-    }
-}
