# app/Http/Controllers/Controller.php
@@ -2,24 +2,21 @@
 
 namespace App\Http\Controllers;
 
-use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 use Illuminate\Foundation\Bus\DispatchesJobs;
-use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
+use Illuminate\Foundation\Validation\ValidatesRequests;
+use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 
 /**
-* @OA\Info(
-*     title="LÝ GIA THẠNH",
-*     version="1.0.0",
-* )
-* @OA\SecurityScheme(
+ * @OA\Info(title="LÝ GIA THẠNH", version="0.1")
+ *  @OA\SecurityScheme(
 *     type="http",
-*     securityScheme="bearerAuth",
+*     securityScheme="BearerAuth",
 *     scheme="bearer",
 *     bearerFormat="JWT"
 * )
-*/
+ */
 class Controller extends BaseController
 {
-    use AuthorizesRequests, ValidatesRequests;
+    use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
 }
