# routes/api.php
@@ -2,20 +2,13 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\AuthController;
-use App\Http\Controllers\UserController;
-/*
-|--------------------------------------------------------------------------
-| API Routes
-|--------------------------------------------------------------------------
-|
-| Here is where you can register API routes for your application. These
-| routes are loaded by the RouteServiceProvider within a group which
-| is assigned the "api" middleware group. Enjoy building your API!
-|
-*/
-Route::group(['middleware' => 'auth:api'], function() {
-    Route::post('/logout', [AuthController::class, 'logout']);
-    Route::get('/users', [UserController::class, 'getUsers']);
+use App\Http\Controllers\Api\ApiController;
+
+Route::post("register", [ApiController::class, "register"]);
+Route::post("login", [ApiController::class, "login"]);
+
+Route::group([
+    "middleware" => ["auth:api"]
+], function(){
+    Route::get("live/tv", [ApiController::class, "livetv"]);
 });
-Route::post('/login', [AuthController::class, 'login']);
